<resources>
    <string name="app_name" translatable="false">Mixmatic Loop Pad</string>
    <string name="privacy_policy_url" translatable="false">https://firebasestorage.googleapis.com/v0/b/mixmatic-loop-pad.appspot.com/o/PrivacyPolicy%2Fprivacypolicy.htm?alt=media&amp;token=bd7efa04-d53a-40fa-960e-e04b7df9e3be</string>
    <string name="admob_id" translatable="false">ca-app-pub-4640479150069852~9455449521</string>
    <string name="launch_pad_activity_interstitial_ad_id" translatable="false">ca-app-pub-4640479150069852/9227646327</string>
    <string name="sample_edit_banner_ad_id" translatable="false">ca-app-pub-4640479150069852/3320713529</string>
    <string name="store_activity_banner_ad_id" translatable="false">ca-app-pub-4640479150069852/5320465527</string>
    <string name="stop_ads_prompt">Would you like to stop seeing ads?</string>
    <string name="facebook_application_id" translatable="false">753482518050805</string>
    <string name="facebook_app_id" translatable="false">753482518050805</string>
    <string name="mixmatic" translatable="false">Mixmatic</string>
    <string name="loop_pad" translatable="false">Loop Pad</string>
    <string name="title_activity_launch_pad" translatable="false">Mixmatic Loop Pad</string>
    <string name="unlicensed_message">This app is not properly licensed.  Go to Google Play Store to download a licensed version?</string>
    <string name="unlicensed_retry_message">Unable to verify license.  This is probably due to a network error.  Retry?</string>
    <string name="create_first_sample_msg">Create first sample</string>
    <string name="no_network">NETWORK UNAVAILABLE</string>
    <string name="no_network_msg">An active internet connection is required to use the ad supported version of this app.  Enable your network connection and purchase the remove ads item to use the app offline.</string>
    <string name="store_no_network_msg">An active internet connection is needed to access the store</string>
    <string name="welcome_message">Thanks for downloading Mixmatic Loop Pad\n\nStart playing around and tips will popup to help you find features</string>
    <string name="stop_tips">Stop showing tips</string>
    <string name="start_edit_mode_tip">Press the gear icon on the app bar to enter edit mode and add, remove, rearrange, and adjust the individual settings for each touch pad</string>
    <string name="open_library_tip">You can also enter edit mode by opening the sample library drawer on the right</string>
    <string name="edit_mode_tip_1">The settings for each touch pad can be customized to control how it looks and responds</string>
    <string name="edit_mode_tip_2">The default settings for a new sample can be adjusted from the main app settings menu</string>
    <string name="drag_tip">Long press to rearrange pads by dragging and dropping</string>
    <string name="library_tip_1">The sample library is divided into two sections: My Samples and Sample Packs</string>
    <string name="library_tip_2">More sample packs can be downloaded through the in-app store</string>
    <string name="library_tip_3">Create your own samples from your music collection or the built-in microphone by pressing the + icon</string>
    <string name="library_tip_4">Preview a sample by pressing the wave icon\n\nLong press a sample to drag it to a touchpad</string>
    <string name="demo_sample_uneditable">Demo samples included with the app cannot be edited</string>
    <string name="edit_sample">Edit sample</string>
    <string name="loop">Loop</string>
    <string name="quant_mode">Quantization mode</string>
    <string name="color">Color</string>
    <string name="remove_sample">Remove sample from layout</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_mode">Configure touch pads</string>
    <string name="action_play_mode">Exit edit mode</string>
    <string name="action_play_back">Play back mix</string>
    <string name="action_fast_forward">Fast forward</string>
    <string name="action_rewind">Rewind</string>
    <string name="action_save_mix">Export mix as wav</string>
    <string name="action_clear_pads">Clear all touch pads</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="clear_pads_prompt">Are you sure you want to remove the samples from all touch pads?</string>
    <string name="action_reset_demo">Restore demo pad setup</string>
    <string name="reset_demo_prompt">Are you sure you want to restore all touch pads to their original state?</string>
    <string name="got_it">Got it</string>
    <string name="next">Next</string>
    <string name="thanks">Thanks</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="no_thanks">No thanks</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="dismiss">Dismiss</string>
    <string name="hide">Hide</string>
    <string name="error_sample_load">Error loading sample</string>
    <string name="error_out_of_memory">Out of memory</string>
    <string name="error_file_read">Unable to read file</string>
    <string name="bpm_display">%d BPM</string>
    <string name="time_sig_display">%d / 4</string>
    <string name="my_samples">My Samples</string>
    <string name="my_samples_underlined"><u>My Samples</u></string>
    <string name="sample_packs">Sample Packs</string>
    <string name="sample_packs_underlined"><u>Sample Packs</u></string>
    <string name="no_sample_packs_msg">Download more sample packs</string>
    <string name="create_sample_button_text">Create new sample</string>
    <string name="buy">Buy</string>
    <string name="owned">Owned</string>
    <string name="download">Download</string>
    <string name="purchasing">Completing purchase</string>
    <string name="downloading">Downloading&#8230; %1$d %% </string>
    <string name="decompressing">Decompressing&#8230;</string>
    <string name="downloaded">Downloaded</string>
    <string name="pack_install_complete">Sample pack installed</string>
    <string name="untitled">Untitled</string>
    <string name="create_account_prompt">Do you want to create an account?</string>
    <string name="account_explanation">Sign in with your email address or Google account.
        This will keep track of your purchases across devices and allow you to re-download sample packs.
        Without an account, you will be responsible for saving or transferring any files that have been purchased and downloaded.</string>
    <string name="privacy_policy_underlined"><u>Privacy Policy</u></string>
    <string name="store_error_msg">Unable to contact Google Billing</string>
    <string name="purchase_error">Error making purchase: + %1$s</string>
    <string name="unzip_error">Error decompressing. Try downloading again.</string>
    <string name="download_error">Error downloading file.  Please try again.</string>
    <string name="sign_in_success">Signed-in</string>
    <string name="network_error">Unable to sign-in.  Check network connection.</string>
    <string name="auth_error">Authentication failed.  Please try again.</string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="sign_out_success">Signed-out</string>
    <string name="app_extras">App Extras</string>
    <string name="owned_packs">Owned Packs</string>
    <string name="no_purchase_records">No records of sample pack purchases found</string>
    <string name="index_download_error">Unable to contact store</string>
    <string name="license_agreement_popup_title">License Agreement</string>
    <string name="license_agreement">The sounds, samples, loops and effects provided by Mixmatic Loop Pad are licensed to you on a royalty-free basis. This means that you can use the projects created in the app and use your projects for commercial and non-commercial purposes. The individual sounds included in the projects may not be resold as individual products.</string>
    <string name="accept_license_agreement">I accept</string>
    <string name="reject_license_agreement">I do not accept</string>
    <string name="action_trim_wav">Trim to selection</string>
    <string name="action_trim_options">Trim options</string>
    <string name="action_trim_to_sample">Save selection</string>
    <string name="action_edit_beats">Edit beats</string>
    <string name="action_select">Select</string>
    <string name="load_audio_file">New audio file</string>
    <string name="action_wav_edit_options">Waveform options</string>
    <string name="action_resample">Resample</string>
    <string name="dialog_title_check_for_save">Wait a minute &#8230;</string>
    <string name="dialog_message_check_for_save">Do you want to save this sample?</string>
    <string name="sample_name_message">Enter a name for this sample</string>
    <string name="file_exists_message">A sample with this name already exists</string>
    <string name="unavailable">Unavailable</string>
    <string name="sample_rate">%d hz</string>
    <string name="sample_length_seconds">%f seconds</string>
    <string name="sample_size_bytes">%f Bytes</string>
    <string name="sample_size_kb">%f KB</string>
    <string name="sample_size_mb">%f MB</string>
    <string name="new_sample_popup_title">Create new samples from &#8230;</string>
    <string name="music_library">Music Library</string>
    <string name="mic_record">Microphone</string>
    <string name="new_sample">New sample</string>
    <string name="decoding_audio_msg">Decoding audio &#8230;</string>
    <string name="action_insert_beat">Insert beat</string>
    <string name="action_remove_beat">Remove beat</string>
    <string name="action_identify_beats">Re-calculate beats</string>
    <string name="action_adjust_tempo">Match global tempo</string>
    <string name="toast_no_beats_found">No beats were detected</string>
    <string name="show_beats">Show beat marks</string>
    <string name="action_edit_sample">Edit sample</string>
    <string name="action_loop_mode">Loop</string>
    <string name="action_launch_mode">Launch mode</string>
    <string name="action_launch_mode_trigger">Trigger</string>
    <string name="action_launch_mode_gate">Gate</string>
    <string name="action_remove_sample">Remove sample</string>
    <string name="action_pick_color">Change color</string>
    <string name="action_set_volume">Volume</string>
    <string name="action_reset">Reset recording</string>
    <string name="mix_pref_title">Mix/Playback Preferences</string>
    <string name="pref_bpm">Tempo</string>
    <string name="pref_bpm_summary">%d BPM\nThe number of beats per minute</string>
    <string name="pref_time_signature">Time signature</string>
    <string name="pref_time_sig_summary">%s / 4\nThe number of beats in one bar.  Important for samples that are quantized to the bar.</string>
    <string name="loop_pad_pref_title">Loop pad preferences</string>
    <string name="show_sample_name_overlay">Always show sample name overlay</string>
    <string name="show_sample_overlay_summary">Display the names of the samples loaded in the touch pads at all times</string>
    <string name="pref_launch_mode">Default launch mode</string>
    <string name="pref_loop_mode">Loop by default</string>
    <string name="pref_loop_summary">When a new sample is added to a touch pad, it will be set to loop</string>
    <string name="pref_quantization">Default quantization mode</string>
    <string name="sample_tempo_msg" formatted="false">Sample tempo: %.2f</string>
    <string name="global_tempo_msg" formatted="false">Global tempo: %d</string>
    <string name="resample_suggested_ratio" formatted="false">Suggested ratio to match tempo: %.3f</string>
    <string name="resample_ratio">Ratio: %.3f</string>
</resources>