<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_select"
        android:title="@string/action_select"
        android:icon="@drawable/ic_action_select"
        android:checkable="true"
        android:showAsAction="ifRoom" />
    <item android:title="@string/action_wav_edit_options"
        android:icon="@drawable/ic_action_show_beats"
        android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_edit_beats"
                android:title="@string/action_edit_beats"/>
            <item android:id="@+id/action_resample"
                android:title="@string/action_resample"/>
        </menu>
    </item>
    <item android:id="@+id/action_load_file"
        android:title="@string/load_audio_file"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_pick_color"
       android:title="@string/action_pick_color"
        android:icon="@drawable/ic_action_color"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_action_content_save"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
