<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nakedape.mixmaticlooppad.LaunchPadActivity" >
    <item android:id="@+id/action_play"
        android:title="@string/action_play_back"
        android:icon="@drawable/ic_action_av_play_arrow"
        app:showAsAction="always"/>
    <item android:id="@+id/action_rewind"
        android:title="@string/action_rewind"
        android:icon="@drawable/ic_action_av_fast_rewind"
        android:visible="false"
        app:showAsAction="always"/>
    <item android:id="@+id/action_fast_forward"
        android:title="@string/action_fast_forward"
        android:icon="@drawable/ic_action_av_fast_forward"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_edit_mode"
        android:title="@string/action_edit_mode"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always"/>
    <item android:id="@+id/action_clear_pads"
        android:title="@string/action_clear_pads"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
