<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tutorial_popup">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_2dp_primary_dark"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp" />
            <TextView android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:maxWidth="200dp"
                android:textSize="16sp"
                android:textColor="@color/text_primary_light"
                android:text="@string/welcome_message"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <CheckBox android:id="@+id/checkbox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/text_primary_light"
                app:buttonTint="@color/text_primary_light"
                android:buttonTint="@color/text_primary_light"
                android:text="@string/stop_tips"/>
            <Button android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rounded_corner_2dp_primary_dark"
                android:textColor="@color/text_primary_light"
                android:text="@string/no_thanks"
                android:visibility="gone"/>
            <Button android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rounded_corner_2dp_accent"
                android:textColor="@color/text_primary_light"
                android:text="@string/got_it"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>