<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/popup_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout android:id="@+id/new_image_popup"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/popup_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="end">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/new_sample_popup_title"/>
    </LinearLayout>
    <TextView
        android:id="@+id/music_library_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/music_library"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_av_my_library_music_30dp"
        android:drawableStart="@drawable/ic_av_my_library_music_30dp"
        android:drawablePadding="8dp"
        android:background="@drawable/button_transparent"
        android:padding="4dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="PopupLibraryButtonClick"/>
    <TextView
        android:id="@+id/gallery_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/mic_record"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_av_mic_30dp"
        android:drawableStart="@drawable/ic_av_mic_30dp"
        android:drawablePadding="8dp"
        android:background="@drawable/button_transparent"
        android:padding="4dp"
        android:clickable="true"
        android:onClick="PopupRecordButtonClick"/>
</LinearLayout>
</RelativeLayout>